styles_src/q-table.scss
.q-table {
  opacity: 1 !important;
}

.q-table__subtitle {
  margin-bottom: 12px;
}

.q-table__cell {
  text-align: left !important;
}

.q-table__cell--numeric {
  text-align: right !important;
}

.q-table {
  table {
    border-collapse: collapse;
    margin: 0;
    padding: 0;
    width: 100%;
    table-layout: auto;
  }
  table thead {
    background: unset;
  }
  table tbody tr {
    border: 1px solid #e9e9ee;
  }
  table th,
  table td {
    padding: 4px;
    border: 0 !important;
  }
  table th {
    font-weight: unset;
  }
}

.q-table--card-layout {
  table {
    border: 0;
  }
  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }
  table tr {
    display: block;
    margin-bottom: 6px;
  }
  table td {
    display: block;
    text-align: right;
  }
  table td:before {
    /*
    * aria-label has no advantage, it won't be read inside a table
    content: attr(aria-label);
    */
    content: attr(data-label);
    float: left;
    font-weight: 500;
  }
  table td:last-child {
    border-bottom: 0;
  }
}

